Fixed Learn layout
Now doesn't collapse but gets squished together as browser size collapses.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,14 +124,14 @@ header .navbar .mobile {
     }
 
     main .learn-new .text-container {
-        
+        margin-left: 1.3rem;
     }
 
     main .learn-new .students-img {
         display: flex;
         flex: 1;
         flex-direction: column;
-        width: 60%;
+        width: 100%;
         padding: 1.7rem 1.3rem;
     }
 
@@ -142,7 +142,7 @@ header .navbar .mobile {
         flex-direction: column;
         justify-items: center;
         align-items: flex-start;
-        width: 40%;
+        width: 65%;
         margin: auto 5rem auto 1.3rem;
     }
 
@@ -152,6 +152,7 @@ header .navbar .mobile {
         color: black;
         opacity: 0.7;
         line-height: 1.15;
+        width: 100%;
     }
 
     main .learn-new .students-cta h4 {
@@ -161,13 +162,15 @@ header .navbar .mobile {
         opacity: 0.7;
         line-height: 1.35;
         margin-top: 1.5rem;
+        width: 100%;
     }
 
     main .learn-new .students-cta .start-button {
         display: block;
         width: 100%;
         margin-top: 1.5rem;
-        padding: 0.44rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         text-align: center;
         font-size: 0.85rem;
         color:white;
